fix: migrate generate learning to usechat

--- a/src/app.css
+++ b/src/app.css
@@ -76,3 +76,15 @@
     @apply bg-background text-foreground;
   }
 }
+
+table {
+  width: 100%;
+}
+thead {
+  text-align: left;
+}
+table,
+th,
+td {
+  border: 1px solid;
+}
