--- a/src/app.css
+++ b/src/app.css
@@ -1,90 +1,226 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
- 
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
- 
+
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
- 
+
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
- 
+
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
- 
+
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
- 
+
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
- 
+
     --destructive: 0 72.2% 50.6%;
     --destructive-foreground: 210 40% 98%;
- 
+
     --ring: 222.2 84% 4.9%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
- 
+
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
- 
+
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
- 
+
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
- 
+
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
- 
+
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
- 
+
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
- 
+
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
- 
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
- 
+
     --ring: 212.7 26.8% 83.9%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
+
   }
+
   body {
     @apply bg-background text-foreground;
   }
+
+  table {
+    @apply w-full
+  }
+
+  thead {
+    @apply text-left
+  }
+
+  table,
+  th,
+  td {
+    @apply border-[1px] border-solid
+  }
+
+  a, button, [role="button"] {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_01.png"), pointer;
+    -webkit-animation: cursor 500ms infinite;
+    animation: cursor 500ms infinite;
+  }
+
+  input,
+  textarea {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_01.png"), text;
+    -webkit-animation: cursor-text 500ms infinite;
+    animation: cursor-text 500ms infinite;
+  }
 }
 
-table {
-  width: 100%;
+@layer utilities {
+  .cursor-pointer {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_01.png"), text;
+    -webkit-animation: cursor 500ms infinite;
+    animation: cursor 500ms infinite;
+  }
+
+  .cursor-text {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_01.png"), text;
+    -webkit-animation: cursor-text 500ms infinite;
+    animation: cursor-text 500ms infinite;
+  }
 }
-thead {
-  text-align: left;
+
+
+@-webkit-keyframes cursor {
+  0% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_01.png"), auto;
+  }
+
+  20% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_02.png"), auto;
+  }
+
+  40% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_03.png"), auto;
+  }
+
+  60% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_04.png"), auto;
+  }
+
+  80% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_05.png"), auto;
+  }
+
+  100% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_06.png"), auto;
+  }
 }
-table,
-th,
-td {
-  border: 1px solid;
+
+@keyframes cursor {
+  0% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_01.png"), auto;
+  }
+
+  20% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_02.png"), auto;
+  }
+
+  40% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_03.png"), auto;
+  }
+
+  60% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_04.png"), auto;
+  }
+
+  80% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_05.png"), auto;
+  }
+
+  100% {
+    cursor: url("./cursor-image/azki/pointer/AZKi[nomal_select]_06.png"), auto;
+  }
+}
+
+@-webkit-keyframes cursor-text {
+  0% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_01.png"), auto;
+  }
+
+  20% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_02.png"), auto;
+  }
+
+  40% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_03.png"), auto;
+  }
+
+  60% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_04.png"), auto;
+  }
+
+  80% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_05.png"), auto;
+  }
+
+  100% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_06.png"), auto;
+  }
+}
+
+@keyframes cursor-text {
+  0% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_01.png"), auto;
+  }
+
+  20% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_02.png"), auto;
+  }
+
+  40% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_03.png"), auto;
+  }
+
+  60% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_04.png"), auto;
+  }
+
+  80% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_05.png"), auto;
+  }
+
+  100% {
+    cursor: url("./cursor-image/azki/text/AZKi[text_select]_06.png"), auto;
+  }
 }
